# curvy-ai

./: .gitignore  README.md  alt_main.py  altalt_ppo.py  async_rollout_buffer.py  breakout_benchmark.py  breakout_benchmark_myvers.py  breakout_benchmark_myvers_async.py  breakout_benchmark_myvers_async_stoc.py  breakout_test.py  constants.py  logger.py  main.py  oldagents.py  ppo_torch.py  pyppeteer_speed.py  pyproject.toml  trainer.py  trainer_main.py  utils.py  vis.py  worker.py
agent/: __init__.py  agent.py  categorical_masked.py  impala.py  impala_feat_ext.py  nature_cnn.py  net.py  ppo.py  stable_agent.py
breakout/: reward_history.json
screen/: __init__.py  fake_env.py  game.py  screen.py  types.py
tmp/ppo/: actor_torch_ppo  critic_torch_ppo
