[tool.poetry]
name = "curvy-ai"
version = "0.1.0"
description = "A bot that plays curve fever"
authors = ["Douglas Li <douglas@shiftlab.ai>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
